--- a/2_Preprocessing_of_Training_Data.ipynb
+++ b/2_Preprocessing_of_Training_Data.ipynb
@@ -92,12 +92,15 @@
        " u'ALPHA_M',\n",
        " u'AL_FE',\n",
        " u'AL_FE_ERR',\n",
+       " u'ASPCAP error_spectrum',\n",
+       " u'ASPCAP spectrum',\n",
        " u'CA_FE',\n",
        " u'CA_FE_ERR',\n",
        " u'C_FE',\n",
        " u'C_FE_ERR',\n",
        " u'FE_H',\n",
        " u'FE_H_ERR',\n",
+       " u'FPARAM',\n",
        " u'IDs',\n",
        " u'K_FE',\n",
        " u'K_FE_ERR',\n",
@@ -107,6 +110,7 @@
        " u'MG_FE_ERR',\n",
        " u'MN_FE',\n",
        " u'MN_FE_ERR',\n",
+       " u'Main Sequence Flag',\n",
        " u'NA_FE',\n",
        " u'NA_FE_ERR',\n",
        " u'NI_FE',\n",
@@ -147,7 +151,7 @@
     }
    ],
    "source": [
-    "filename = datadir + 'apStar_visits_main_dr13.h5'\n",
+    "filename = datadir + 'apStar_visits_main.h5'\n",
     "\n",
     "F = h5py.File(filename,'r')\n",
     "print('Dataset keys in file: \\n')\n",
@@ -227,14 +231,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "53135 visits remain.\n"
+      "53135 individual visits from 17149 stars remain.\n"
      ]
     }
    ],
    "source": [
     "indices, cols = np.where((aspcapflag[:]==0.)&(starflag[:]==0.)&(combined_snr[:]>=snr_min)&(vscatter[:]<vscatter_max)&(fe_h[:]>fe_h_min)&(teff[:]>teff_min)&(teff[:]<teff_max)&(logg[:]!=-9999.).reshape(len(ap_id),1))\n",
     "\n",
-    "print(str(len(indices))+' visits remain.')"
+    "ap_id_high_snr = ap_id[indices]\n",
+    "print(str(len(ap_id_high_snr))+' individual visits from '+str(len(set(ap_id_high_snr)))+' stars remain.')"
    ]
   },
   {
@@ -244,7 +249,8 @@
     "**Select the first **$num\\_ref$** visits for the reference set**\n",
     "\n",
     "We shuffle around the data to avoid local effects.\n",
-    "Later on, it will be be split into training and cross-validation sets"
+    "Later on, it will be be split into training and cross-validation sets.\n",
+    "The remaining high S/N spectra will be used in the test set"
    ]
   },
   {
@@ -278,38 +284,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Separate a test set of APOGEE IDs**\n",
-    "\n",
-    "- These APOGEE IDs will be processed in a following notebook to create StarNet's High S/N test set\n",
-    "- Make sure there are no duplicates from test set that are also in training set (this is necessary because there are some duplicates in the APOGEE v603.fits file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2651 stars to be processed for the High S/N test set.\n"
-     ]
-    }
-   ],
-   "source": [
-    "indices_test = indices[num_ref:]\n",
-    "\n",
-    "ap_id_test = ap_id[indices_test]\n",
-    "ap_id_test = list(set(ap_id_test)-set(ap_id_ref))\n",
-    "np.save(datadir + 'high_snr_test_apids', ap_id_test)\n",
-    "print(str(len(ap_id_test))+' stars to be processed for the High S/N test set.')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**Now collect individual visit spectra, normalize each spectrum, and save data**\n",
     "\n",
     "**Normalize spectra**\n",
@@ -320,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -337,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -400,15 +374,6 @@
     "\n",
     "print(savename+' has been saved as the reference set to be used in 4_Train_Model.ipynb')  "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
