--- a/3_Preprocessing_of_Test_Data.ipynb
+++ b/3_Preprocessing_of_Test_Data.ipynb
@@ -99,6 +99,7 @@
        " u'MG_FE_ERR',\n",
        " u'MN_FE',\n",
        " u'MN_FE_ERR',\n",
+       " u'Main Sequence Flag',\n",
        " u'NA_FE',\n",
        " u'NA_FE_ERR',\n",
        " u'NI_FE',\n",
@@ -135,8 +136,7 @@
     }
    ],
    "source": [
-    "#filename = datadir + 'apStar_combined_main.h5'\n",
-    "filename = datadir + 'apStar_combined_main_dr13.h5'\n",
+    "filename = datadir + 'apStar_combined_main.h5'\n",
     "F = h5py.File(filename,'r')\n",
     "print('Dataset keys in file: \\n')\n",
     "F.keys()"
@@ -264,20 +264,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Load high S/N APOGEE IDs**\n",
+    "**Load test set APOGEE IDs**\n",
     "\n",
-    "Load a file that contains the APOGEE IDs for High S/N spectra that will be processed into the High S/N test set. This file was created in 2_Preprocessing_of_Training_Data.ipynb"
+    "Load previously created file that contains the training data. We do not want to include any of the APOGEE IDs used in the training set in our test set. This file was created in 2_Preprocessing_of_Training_Data.ipynb"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "high_snr_test_ap_ids = np.load(datadir + 'high_snr_test_apids.npy')"
+    "savename = 'training_data.h5'\n",
+    "\n",
+    "with h5py.File(datadir + savename, \"r\") as f:\n",
+    "    \n",
+    "    train_ap_id = f['Ap_ID'][:]"
    ]
   },
   {
@@ -296,29 +298,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "High S/N test set includes 2651 combined spectra\n"
+      "Test set includes 21033 combined spectra\n"
      ]
     }
    ],
    "source": [
-    "indices_high_snr = [i for i, item in enumerate(high_snr_test_ap_ids) if item in ap_id]\n",
+    "indices_test = [i for i, item in enumerate(ap_id) if item not in train_ap_id]\n",
     "\n",
-    "high_snr_ap_id = ap_id[indices_high_snr]\n",
-    "high_snr_teff = teff[indices_high_snr]\n",
-    "high_snr_logg = logg[indices_high_snr]\n",
-    "high_snr_fe_h = fe_h[indices_high_snr]\n",
-    "high_snr_combined_snr = combined_snr[indices_high_snr]\n",
+    "test_ap_id = ap_id[indices_test]\n",
+    "test_teff = teff[indices_test]\n",
+    "test_logg = logg[indices_test]\n",
+    "test_fe_h = fe_h[indices_test]\n",
+    "test_combined_snr = combined_snr[indices_test]\n",
     "\n",
-    "indices_high_snr = indices[indices_high_snr] # These indices will be used to index through the spectra\n",
+    "indices_test_set = indices[indices_test] # These indices will be used to index through the spectra\n",
     "\n",
-    "print('High S/N test set includes '+str(len(high_snr_ap_id))+' combined spectra')"
+    "print('Test set includes '+str(len(test_ap_id))+' combined spectra')"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "**Now collect spectra and error spectra. Then normalize each spectrum and save the data**\n",
     "\n",
@@ -348,187 +348,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "high_snr_test_data.h5 has been saved as the high S/N test set to be used in 5_test_Model.ipynb\n"
+      "test_data.h5 has been saved as the low S/N test set to be used in 5_Test_Model.ipynb\n"
      ]
     }
    ],
    "source": [
-    "savename = 'high_snr_test_data.h5'\n",
+    "savename = 'test_data.h5'\n",
     "# if path already exist, you must remove it first using os.remove(path) \n",
-    "#os.remove(datadir + savename)\n",
+    "os.remove(datadir + savename)\n",
     "dt = h5py.special_dtype(vlen=bytes)\n",
     "\n",
     "with h5py.File(datadir + savename, \"a\") as f:\n",
     "    \n",
-    "    # Create datasets for your high S/N data file \n",
+    "    # Create datasets for your test data file \n",
     "    spectra_ds = f.create_dataset('spectrum', (1,7214), maxshape=(None,7214), dtype=\"f\", chunks=(1,7214))\n",
     "    error_spectra_ds = f.create_dataset('error_spectrum', (1,7214), maxshape=(None,7214), dtype=\"f\", chunks=(1,7214))\n",
-    "    teff_ds = f.create_dataset('TEFF', high_snr_teff.shape, dtype=\"f\")\n",
-    "    logg_ds = f.create_dataset('LOGG', high_snr_logg.shape, dtype=\"f\")\n",
-    "    fe_h_ds = f.create_dataset('FE_H', high_snr_fe_h.shape, dtype=\"f\")\n",
-    "    combined_snr_ds = f.create_dataset('combined_snr', high_snr_combined_snr.shape, dtype=\"f\")\n",
-    "    ap_id_ds = f.create_dataset('Ap_ID', high_snr_ap_id.shape, dtype=\"S18\")\n",
+    "    teff_ds = f.create_dataset('TEFF', test_teff.shape, dtype=\"f\")\n",
+    "    logg_ds = f.create_dataset('LOGG', test_logg.shape, dtype=\"f\")\n",
+    "    fe_h_ds = f.create_dataset('FE_H', test_fe_h.shape, dtype=\"f\")\n",
+    "    combined_snr_ds = f.create_dataset('combined_snr', test_combined_snr.shape, dtype=\"f\")\n",
+    "    ap_id_ds = f.create_dataset('Ap_ID', test_ap_id.shape, dtype=\"S18\")\n",
     "    \n",
     "    # Save data to data file\n",
-    "    teff_ds[:] = high_snr_teff\n",
-    "    logg_ds[:] = high_snr_logg\n",
-    "    fe_h_ds[:] = high_snr_fe_h\n",
-    "    combined_snr_ds[:] = high_snr_combined_snr\n",
-    "    ap_id_ds[:] = high_snr_ap_id.tolist()\n",
+    "    teff_ds[:] = test_teff\n",
+    "    logg_ds[:] = test_logg\n",
+    "    fe_h_ds[:] = test_fe_h\n",
+    "    combined_snr_ds[:] = test_combined_snr\n",
+    "    ap_id_ds[:] = test_ap_id.tolist()\n",
     "        \n",
     "    # Collect spectra\n",
     "    first_entry=True\n",
     "    \n",
-    "    for i in indices_high_snr:\n",
-    "\n",
-    "        spectrum = F['spectrum'][i:i+1]\n",
-    "        err_spectrum = F['error_spectrum'][i:i+1]\n",
-    "\n",
-    "\n",
-    "        # NORMALIZE SPECTRUM\n",
-    "        # Separate spectra into chips\n",
-    "        blue_sp = spectrum[0:1,blue_chip_begin:blue_chip_end]\n",
-    "        green_sp = spectrum[0:1,green_chip_begin:green_chip_end]\n",
-    "        red_sp = spectrum[0:1,red_chip_begin:red_chip_end]\n",
-    "        \n",
-    "        blue_sp_med = np.median(blue_sp, axis=1)\n",
-    "        green_sp_med = np.median(green_sp, axis=1)\n",
-    "        red_sp_med = np.median(red_sp, axis=1)\n",
-    "\n",
-    "        #Normalize spectra by chips\n",
-    "        blue_sp = (blue_sp.T/blue_sp_med).T\n",
-    "        green_sp = (green_sp.T/green_sp_med).T\n",
-    "        red_sp = (red_sp.T/red_sp_med).T\n",
-    "\n",
-    "        # Recombine spectra\n",
-    "        spectrum = np.column_stack((blue_sp,green_sp,red_sp))\n",
-    "        \n",
-    "        # Normalize error spectrum using the same method\n",
-    "        # Separate error spectra into chips\n",
-    "\n",
-    "        blue_sp = err_spectrum[0:1,blue_chip_begin:blue_chip_end]\n",
-    "        green_sp = err_spectrum[0:1,green_chip_begin:green_chip_end]\n",
-    "        red_sp = err_spectrum[0:1,red_chip_begin:red_chip_end]\n",
-    "\n",
-    "        # Normalize error spectra by chips\n",
-    "        blue_sp = (blue_sp.T/blue_sp_med).T\n",
-    "        green_sp = (green_sp.T/green_sp_med).T\n",
-    "        red_sp = (red_sp.T/red_sp_med).T\n",
-    "\n",
-    "        # Recombine error spectra\n",
-    "        err_spectrum = np.column_stack((blue_sp,green_sp,red_sp))\n",
-    "        \n",
-    "        if first_entry:\n",
-    "            spectra_ds[0] = spectrum\n",
-    "            error_spectra_ds[0] = err_spectrum\n",
-    "            first_entry=False\n",
-    "        else:\n",
-    "            spectra_ds.resize(spectra_ds.shape[0]+1, axis=0)\n",
-    "            error_spectra_ds.resize(error_spectra_ds.shape[0]+1, axis=0)\n",
-    "\n",
-    "            spectra_ds[-1] = spectrum\n",
-    "            error_spectra_ds[-1] = err_spectrum\n",
-    "\n",
-    "print(savename+' has been saved as the high S/N test set to be used in 5_test_Model.ipynb')  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Create a low S/N test set**\n",
-    "\n",
-    "1. Add a cut to combined S/N < 200\n",
-    "2. Normalize the spectra as before\n",
-    "3. Save the data just like above."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "snr_max = 200."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Low S/N test set includes 18386 combined spectra\n"
-     ]
-    }
-   ],
-   "source": [
-    "indices_low_snr, cols = np.where((combined_snr[:]<snr_max).reshape(len(ap_id),1))\n",
-    "\n",
-    "low_snr_ap_id = ap_id[indices_low_snr]\n",
-    "low_snr_teff = teff[indices_low_snr]\n",
-    "low_snr_logg = logg[indices_low_snr]\n",
-    "low_snr_fe_h = fe_h[indices_low_snr]\n",
-    "low_snr_combined_snr = combined_snr[indices_low_snr]\n",
-    "\n",
-    "indices_low_snr = indices[indices_low_snr] # These indices will be used to index through the spectra\n",
-    "\n",
-    "print('Low S/N test set includes '+str(len(low_snr_ap_id))+' combined spectra')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "low_snr_test_data.h5 has been saved as the low S/N test set to be used in 5_Test_Model.ipynb\n"
-     ]
-    }
-   ],
-   "source": [
-    "savename = 'low_snr_test_data.h5'\n",
-    "# if path already exist, you must remove it first using os.remove(path) \n",
-    "#os.remove(datadir + savename)\n",
-    "dt = h5py.special_dtype(vlen=bytes)\n",
-    "\n",
-    "with h5py.File(datadir + savename, \"a\") as f:\n",
-    "    \n",
-    "    # Create datasets for your high S/N data file \n",
-    "    spectra_ds = f.create_dataset('spectrum', (1,7214), maxshape=(None,7214), dtype=\"f\", chunks=(1,7214))\n",
-    "    error_spectra_ds = f.create_dataset('error_spectrum', (1,7214), maxshape=(None,7214), dtype=\"f\", chunks=(1,7214))\n",
-    "    teff_ds = f.create_dataset('TEFF', low_snr_teff.shape, dtype=\"f\")\n",
-    "    logg_ds = f.create_dataset('LOGG', low_snr_logg.shape, dtype=\"f\")\n",
-    "    fe_h_ds = f.create_dataset('FE_H', low_snr_fe_h.shape, dtype=\"f\")\n",
-    "    combined_snr_ds = f.create_dataset('combined_snr', low_snr_combined_snr.shape, dtype=\"f\")\n",
-    "    ap_id_ds = f.create_dataset('Ap_ID', low_snr_ap_id.shape, dtype=\"S18\")\n",
-    "    \n",
-    "    # Save data to data file\n",
-    "    teff_ds[:] = low_snr_teff\n",
-    "    logg_ds[:] = low_snr_logg\n",
-    "    fe_h_ds[:] = low_snr_fe_h\n",
-    "    combined_snr_ds[:] = low_snr_combined_snr\n",
-    "    ap_id_ds[:] = low_snr_ap_id.tolist()\n",
-    "        \n",
-    "    # Collect spectra\n",
-    "    first_entry=True\n",
-    "    \n",
-    "    for i in indices_low_snr:\n",
+    "    for i in indices_test_set:\n",
     "\n",
     "        spectrum = F['spectrum'][i:i+1]\n",
     "        err_spectrum = F['error_spectrum'][i:i+1]\n",
@@ -582,15 +440,6 @@
     "\n",
     "print(savename+' has been saved as the low S/N test set to be used in 5_Test_Model.ipynb')  "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
