--- a/1_Download_Data.ipynb
+++ b/1_Download_Data.ipynb
@@ -11,14 +11,12 @@
     "\n",
     "| file | size | content |\n",
     "| :---- | :----: | :----|\n",
-    "| apStar_visits_main.h5 | 38.6GB | apStar individual visit spectra for training StarNet, created from the APOGEE DR13 |\n",
-    "| apStar_combined_main.h5 | 10.3GB | apStar combined spectra for preprocessing StarNet, created by pulling apStar combined spectra from the APOGEE DR13 |\n",
-    "| high_snr_test_apids.npy | 48kB | APOGEE IDs for high S/N test set to avoid downloading the much larger apStar_visits_main.h5 |\n",
-    "| training_data.h5 | 1.3GB | apStar individual visit spectra for training, useful to skip preprocessing |\n",
-    "| mean_and_std.npy | 104B |  mean and standard deviations for the stellar labels used during preprocessing |\n",
-    "| high_snr_test_data.h5 | 0.2GB | High S/N apStar combined spectra test set |\n",
-    "| low_snr_test_data.h5 | 1.1GB | Low S/N apStar combined spectra test set |\n",
-    "| starnet_cnn.h5 | 89MB | pretrained StarNet model with keras on APOGEE DR13 | \n",
+    "| apStar_visits_main.h5 | 35.9GB | apStar individual visit spectra for training StarNet, created from the APOGEE DR13. Used in 2_Preprocessing_of_Training_Data.ipynb |\n",
+    "| apStar_combined_main.h5 | 9.6GB | apStar combined spectra for preprocessing StarNet, created by pulling apStar combined spectra from the APOGEE DR13. Used in 3_Preprocessing_of_Test_Data.ipynb |\n",
+    "| training_data.h5 | 1.2GB | apStar individual visit spectra for training, useful to skip preprocessing. Used in 4_Train_Model.ipynb |\n",
+    "| mean_and_std.npy | 104B |  mean and standard deviations for the stellar labels used during preprocessing. Used in 4_Train_Model.ipynb and 5_Test_Model.ipynb |\n",
+    "| test_data.h5 | 1.13GB | apStar combined spectra test set. Used in 5_Test_Model.ipynb |\n",
+    "| starnet_cnn.h5 | 85MB | pretrained StarNet model with keras (tensorflow as the backend) on APOGEE DR13. Used in 5_Test_Model.ipynb | \n",
     "\n",
     "\n",
     "You can download the data from the StarNet public VOSpace at CADC. You can either:\n",
