--- a/4_Train_Model.ipynb
+++ b/4_Train_Model.ipynb
@@ -171,7 +171,6 @@
     "# Define the number of training spectra\n",
     "num_train = 41000\n",
     "\n",
-    "#with h5py.File(datadir + training_set, 'r') as F:\n",
     "with h5py.File(datadir+training_set, 'r') as F:\n",
     "    spectra = F['spectrum']\n",
     "    num_flux = spectra.shape[1]\n",
@@ -349,60 +348,79 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/30\n",
-      "72s - loss: 0.0562 - acc: 0.7963 - mean_absolute_error: 0.1433 - val_loss: 0.0148 - val_acc: 0.8819 - val_mean_absolute_error: 0.0720\n",
+      "70s - loss: 0.2687 - acc: 0.7139 - mean_absolute_error: 0.2693 - val_loss: 0.0482 - val_acc: 0.7924 - val_mean_absolute_error: 0.1706\n",
       "Epoch 2/30\n",
-      "72s - loss: 0.0186 - acc: 0.8695 - mean_absolute_error: 0.0860 - val_loss: 0.0099 - val_acc: 0.8986 - val_mean_absolute_error: 0.0631\n",
+      "70s - loss: 0.0358 - acc: 0.7787 - mean_absolute_error: 0.1372 - val_loss: 0.0229 - val_acc: 0.7918 - val_mean_absolute_error: 0.1085\n",
       "Epoch 3/30\n",
-      "72s - loss: 0.0114 - acc: 0.8906 - mean_absolute_error: 0.0699 - val_loss: 0.0112 - val_acc: 0.9052 - val_mean_absolute_error: 0.0704\n",
+      "70s - loss: 0.0266 - acc: 0.7935 - mean_absolute_error: 0.1135 - val_loss: 0.0184 - val_acc: 0.8183 - val_mean_absolute_error: 0.0970\n",
       "Epoch 4/30\n",
-      "73s - loss: 0.0089 - acc: 0.9033 - mean_absolute_error: 0.0608 - val_loss: 0.0056 - val_acc: 0.9155 - val_mean_absolute_error: 0.0496\n",
+      "70s - loss: 0.0162 - acc: 0.8260 - mean_absolute_error: 0.0902 - val_loss: 0.0129 - val_acc: 0.8535 - val_mean_absolute_error: 0.0760\n",
       "Epoch 5/30\n",
-      "72s - loss: 0.0060 - acc: 0.9121 - mean_absolute_error: 0.0531 - val_loss: 0.0059 - val_acc: 0.9012 - val_mean_absolute_error: 0.0571\n",
+      "70s - loss: 0.0120 - acc: 0.8463 - mean_absolute_error: 0.0775 - val_loss: 0.0115 - val_acc: 0.8795 - val_mean_absolute_error: 0.0831\n",
       "Epoch 6/30\n",
-      "73s - loss: 0.0051 - acc: 0.9183 - mean_absolute_error: 0.0496 - val_loss: 0.0052 - val_acc: 0.9166 - val_mean_absolute_error: 0.0500\n",
+      "70s - loss: 0.0092 - acc: 0.8735 - mean_absolute_error: 0.0689 - val_loss: 0.0094 - val_acc: 0.8530 - val_mean_absolute_error: 0.0748\n",
       "Epoch 7/30\n",
-      "72s - loss: 0.0049 - acc: 0.9226 - mean_absolute_error: 0.0491 - val_loss: 0.0057 - val_acc: 0.9198 - val_mean_absolute_error: 0.0484\n",
+      "71s - loss: 0.0081 - acc: 0.8871 - mean_absolute_error: 0.0638 - val_loss: 0.0103 - val_acc: 0.8713 - val_mean_absolute_error: 0.0679\n",
       "Epoch 8/30\n",
-      "76s - loss: 0.0041 - acc: 0.9280 - mean_absolute_error: 0.0457 - val_loss: 0.0053 - val_acc: 0.9311 - val_mean_absolute_error: 0.0445\n",
+      "70s - loss: 0.0075 - acc: 0.8969 - mean_absolute_error: 0.0611 - val_loss: 0.0110 - val_acc: 0.8318 - val_mean_absolute_error: 0.0706\n",
       "Epoch 9/30\n",
-      "72s - loss: 0.0044 - acc: 0.9280 - mean_absolute_error: 0.0460 - val_loss: 0.0057 - val_acc: 0.9349 - val_mean_absolute_error: 0.0497\n",
+      "71s - loss: 0.0075 - acc: 0.8957 - mean_absolute_error: 0.0613 - val_loss: 0.0077 - val_acc: 0.9182 - val_mean_absolute_error: 0.0619\n",
       "Epoch 10/30\n",
-      "71s - loss: 0.0036 - acc: 0.9333 - mean_absolute_error: 0.0427 - val_loss: 0.0057 - val_acc: 0.9364 - val_mean_absolute_error: 0.0448\n",
+      "70s - loss: 0.0063 - acc: 0.9048 - mean_absolute_error: 0.0569 - val_loss: 0.0055 - val_acc: 0.9118 - val_mean_absolute_error: 0.0494\n",
       "Epoch 11/30\n",
-      "72s - loss: 0.0037 - acc: 0.9327 - mean_absolute_error: 0.0438 - val_loss: 0.0045 - val_acc: 0.9399 - val_mean_absolute_error: 0.0412\n",
+      "71s - loss: 0.0089 - acc: 0.8997 - mean_absolute_error: 0.0628 - val_loss: 0.0079 - val_acc: 0.9160 - val_mean_absolute_error: 0.0669\n",
       "Epoch 12/30\n",
-      "72s - loss: 0.0033 - acc: 0.9371 - mean_absolute_error: 0.0412 - val_loss: 0.0046 - val_acc: 0.9253 - val_mean_absolute_error: 0.0470\n",
+      "70s - loss: 0.0058 - acc: 0.9128 - mean_absolute_error: 0.0543 - val_loss: 0.0045 - val_acc: 0.9240 - val_mean_absolute_error: 0.0461\n",
       "Epoch 13/30\n",
-      "\n",
-      "Epoch 00012: reducing learning rate to 0.00034999998752.\n",
-      "73s - loss: 0.0030 - acc: 0.9390 - mean_absolute_error: 0.0394 - val_loss: 0.0068 - val_acc: 0.9179 - val_mean_absolute_error: 0.0609\n",
+      "70s - loss: 0.0051 - acc: 0.9187 - mean_absolute_error: 0.0511 - val_loss: 0.0055 - val_acc: 0.9235 - val_mean_absolute_error: 0.0512\n",
       "Epoch 14/30\n",
-      "73s - loss: 0.0025 - acc: 0.9459 - mean_absolute_error: 0.0350 - val_loss: 0.0043 - val_acc: 0.9298 - val_mean_absolute_error: 0.0400\n",
+      "71s - loss: 0.0050 - acc: 0.9148 - mean_absolute_error: 0.0509 - val_loss: 0.0058 - val_acc: 0.9129 - val_mean_absolute_error: 0.0554\n",
       "Epoch 15/30\n",
-      "71s - loss: 0.0021 - acc: 0.9466 - mean_absolute_error: 0.0333 - val_loss: 0.0038 - val_acc: 0.9391 - val_mean_absolute_error: 0.0390\n",
+      "71s - loss: 0.0048 - acc: 0.9186 - mean_absolute_error: 0.0502 - val_loss: 0.0057 - val_acc: 0.9182 - val_mean_absolute_error: 0.0538\n",
       "Epoch 16/30\n",
-      "71s - loss: 0.0020 - acc: 0.9492 - mean_absolute_error: 0.0330 - val_loss: 0.0028 - val_acc: 0.9428 - val_mean_absolute_error: 0.0378\n",
+      "\n",
+      "Epoch 00015: reducing learning rate to 0.00034999998752.\n",
+      "70s - loss: 0.0047 - acc: 0.9157 - mean_absolute_error: 0.0498 - val_loss: 0.0048 - val_acc: 0.9266 - val_mean_absolute_error: 0.0446\n",
       "Epoch 17/30\n",
-      "\n",
-      "Epoch 00016: reducing learning rate to 0.00017499999376.\n",
-      "72s - loss: 0.0020 - acc: 0.9487 - mean_absolute_error: 0.0327 - val_loss: 0.0029 - val_acc: 0.9401 - val_mean_absolute_error: 0.0370\n",
+      "70s - loss: 0.0034 - acc: 0.9328 - mean_absolute_error: 0.0415 - val_loss: 0.0039 - val_acc: 0.9319 - val_mean_absolute_error: 0.0426\n",
       "Epoch 18/30\n",
-      "72s - loss: 0.0015 - acc: 0.9519 - mean_absolute_error: 0.0291 - val_loss: 0.0030 - val_acc: 0.9401 - val_mean_absolute_error: 0.0360\n",
+      "70s - loss: 0.0032 - acc: 0.9330 - mean_absolute_error: 0.0408 - val_loss: 0.0038 - val_acc: 0.9258 - val_mean_absolute_error: 0.0419\n",
       "Epoch 19/30\n",
-      "71s - loss: 0.0015 - acc: 0.9520 - mean_absolute_error: 0.0291 - val_loss: 0.0030 - val_acc: 0.9468 - val_mean_absolute_error: 0.0373\n",
+      "69s - loss: 0.0034 - acc: 0.9303 - mean_absolute_error: 0.0419 - val_loss: 0.0034 - val_acc: 0.9420 - val_mean_absolute_error: 0.0397\n",
       "Epoch 20/30\n",
-      "72s - loss: 0.0015 - acc: 0.9521 - mean_absolute_error: 0.0286 - val_loss: 0.0028 - val_acc: 0.9399 - val_mean_absolute_error: 0.0351\n",
-      "Epoch 21/30\n",
       "\n",
-      "Epoch 00020: reducing learning rate to 8.74999968801e-05.\n",
-      "71s - loss: 0.0015 - acc: 0.9541 - mean_absolute_error: 0.0284 - val_loss: 0.0031 - val_acc: 0.9391 - val_mean_absolute_error: 0.0351\n",
-      "Epoch 00020: early stopping\n"
+      "Epoch 00019: reducing learning rate to 0.00017499999376.\n",
+      "71s - loss: 0.0031 - acc: 0.9359 - mean_absolute_error: 0.0408 - val_loss: 0.0038 - val_acc: 0.9343 - val_mean_absolute_error: 0.0402\n",
+      "Epoch 21/30\n",
+      "71s - loss: 0.0026 - acc: 0.9391 - mean_absolute_error: 0.0370 - val_loss: 0.0032 - val_acc: 0.9386 - val_mean_absolute_error: 0.0400\n",
+      "Epoch 22/30\n",
+      "\n",
+      "Epoch 00021: reducing learning rate to 8.74999968801e-05.\n",
+      "70s - loss: 0.0027 - acc: 0.9391 - mean_absolute_error: 0.0373 - val_loss: 0.0032 - val_acc: 0.9409 - val_mean_absolute_error: 0.0396\n",
+      "Epoch 23/30\n",
+      "70s - loss: 0.0024 - acc: 0.9439 - mean_absolute_error: 0.0351 - val_loss: 0.0038 - val_acc: 0.9394 - val_mean_absolute_error: 0.0390\n",
+      "Epoch 24/30\n",
+      "71s - loss: 0.0023 - acc: 0.9427 - mean_absolute_error: 0.0350 - val_loss: 0.0032 - val_acc: 0.9409 - val_mean_absolute_error: 0.0397\n",
+      "Epoch 25/30\n",
+      "71s - loss: 0.0023 - acc: 0.9408 - mean_absolute_error: 0.0350 - val_loss: 0.0038 - val_acc: 0.9409 - val_mean_absolute_error: 0.0403\n",
+      "Epoch 26/30\n",
+      "\n",
+      "Epoch 00025: reducing learning rate to 8e-05.\n",
+      "70s - loss: 0.0024 - acc: 0.9413 - mean_absolute_error: 0.0347 - val_loss: 0.0030 - val_acc: 0.9457 - val_mean_absolute_error: 0.0380\n",
+      "Epoch 27/30\n",
+      "70s - loss: 0.0022 - acc: 0.9419 - mean_absolute_error: 0.0343 - val_loss: 0.0034 - val_acc: 0.9346 - val_mean_absolute_error: 0.0388\n",
+      "Epoch 28/30\n",
+      "71s - loss: 0.0023 - acc: 0.9463 - mean_absolute_error: 0.0344 - val_loss: 0.0037 - val_acc: 0.9378 - val_mean_absolute_error: 0.0377\n",
+      "Epoch 29/30\n",
+      "70s - loss: 0.0023 - acc: 0.9419 - mean_absolute_error: 0.0342 - val_loss: 0.0041 - val_acc: 0.9314 - val_mean_absolute_error: 0.0387\n",
+      "Epoch 30/30\n",
+      "71s - loss: 0.0023 - acc: 0.9436 - mean_absolute_error: 0.0342 - val_loss: 0.0036 - val_acc: 0.9412 - val_mean_absolute_error: 0.0392\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f7823282e10>"
+       "<keras.callbacks.History at 0x7fe5a8a0c6d0>"
       ]
      },
      "execution_count": 11,
@@ -433,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
