--- a/1_Download_Data.ipynb
+++ b/1_Download_Data.ipynb
@@ -25,6 +25,9 @@
     "```\n",
     "pip install vos\n",
     "```\n",
+    "```\n",
+    "getcert\n",
+    "```\n",
     "You can choose a directory with enough space (~50GB) and download all files into a directory:\n",
     "```\n",
     "vcp vos:starnet/public /path/to/my/starnet/directory\n",
@@ -42,7 +45,7 @@
    "outputs": [],
    "source": [
     "import vos\n",
-    "datadir=\"/home/ubuntu/starnet_data/\" # or \"/path/to/my/starnet/directory\"\n",
+    "datadir=\"" "\n",
     "\n",
     "def starnet_download_file(filename):\n",
     "    vclient = vos.Client()\n",
