--- a/1_Download_Data.ipynb
+++ b/1_Download_Data.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "scrolled": false
@@ -45,12 +45,30 @@
    "outputs": [],
    "source": [
     "import vos\n",
-    "datadir=\"" "\n",
+    "datadir=\"\"\n",
     "\n",
     "def starnet_download_file(filename):\n",
     "    vclient = vos.Client()\n",
     "    vclient.copy('vos:starnet/public/'+filename, datadir+filename)\n",
     "    print(filename+' downloaded')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "starnet_cnn.h5 downloaded\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for example:\n",
+    "starnet_download_file('starnet_cnn.h5')"
    ]
   },
   {
