--- a/2_Preprocessing_of_Training_Data.ipynb
+++ b/2_Preprocessing_of_Training_Data.ipynb
@@ -25,7 +25,7 @@
     "import os\n",
     "import vos\n",
     "\n",
-    "datadir='/home/ubuntu/starnet_data/'  # or \"/path/to/my/starnet/directory\""
+    "datadir=\"\""
    ]
   },
   {
