--- a/3_Preprocessing_of_Test_Data.ipynb
+++ b/3_Preprocessing_of_Test_Data.ipynb
@@ -24,7 +24,7 @@
     "import os\n",
     "import vos\n",
     "\n",
-    "datadir='/home/ubuntu/starnet_data/'  # or \"/path/to/my/starnet/directory\""
+    "datadir=\"\""
    ]
   },
   {
@@ -272,7 +272,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "savename = 'training_data.h5'\n",
