--- a/4_Train_Model.ipynb
+++ b/4_Train_Model.ipynb
@@ -38,7 +38,7 @@
     "from keras.optimizers import Adam\n",
     "from keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
     "\n",
-    "datadir = '/home/ubuntu/starnet_data/'"
+    "datadir = \"\""
    ]
   },
   {
