--- a/5_Test_Model.ipynb
+++ b/5_Test_Model.ipynb
@@ -37,7 +37,7 @@
     "import time\n",
     "from matplotlib import gridspec\n",
     "\n",
-    "datadir = '/home/ubuntu/starnet_data/'"
+    "datadir = \"\""
    ]
   },
   {
@@ -50,7 +50,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mean_and_std = np.load(datadir + 'mean_and_std.npy')\n",
