--- a/6_Error_Propagation.ipynb
+++ b/6_Error_Propagation.ipynb
@@ -36,7 +36,7 @@
     "import tensorflow as tf\n",
     "import time\n",
     "\n",
-    "datadir='/home/ubuntu/starnet_data/' # or '/path/to/my/starnet/directory'"
+    "datadir= \"\""
    ]
   },
   {
@@ -412,7 +412,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "scatter_terms = np.array([[  2.85209088e+01,   2.30193645e+01,   2.10676180e+01,\n",
@@ -516,7 +518,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
