--- a/6_Error_Propagation.ipynb
+++ b/6_Error_Propagation.ipynb
@@ -507,7 +507,7 @@
    "source": [
     "# label names\n",
     "label_names = ['Teff  ','log(g)','[Fe/H]']\n",
-    "units = ['K','cgs','dex']\n",
+    "units = ['K','dex','dex']\n",
     "\n",
     "mean_err_total = np.mean(total_errors, axis=0)\n",
     "print('Mean total statistical errors: \\n')\n",
