--- a/6_Error_Propagation.ipynb
+++ b/6_Error_Propagation.ipynb
@@ -224,9 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "mean_and_std = np.load(denormalization_path)\n",
@@ -353,37 +351,37 @@
       "Making predictions and computing propagated variance for 300 spectra\n",
       "\n",
       "1 completed.\n",
-      "0.773883104324 seconds elapsed.\n",
+      "0.7711789608 seconds elapsed.\n",
       "\n",
       "31 completed.\n",
-      "21.1932361126 seconds elapsed.\n",
+      "21.0132529736 seconds elapsed.\n",
       "\n",
       "61 completed.\n",
-      "41.938945055 seconds elapsed.\n",
+      "41.6145811081 seconds elapsed.\n",
       "\n",
       "91 completed.\n",
-      "62.3968989849 seconds elapsed.\n",
+      "61.9209301472 seconds elapsed.\n",
       "\n",
       "121 completed.\n",
-      "82.8396980762 seconds elapsed.\n",
+      "82.1985800266 seconds elapsed.\n",
       "\n",
       "151 completed.\n",
-      "103.467030048 seconds elapsed.\n",
+      "102.604506969 seconds elapsed.\n",
       "\n",
       "181 completed.\n",
-      "123.905740023 seconds elapsed.\n",
+      "122.930263996 seconds elapsed.\n",
       "\n",
       "211 completed.\n",
-      "144.359602928 seconds elapsed.\n",
+      "143.254734039 seconds elapsed.\n",
       "\n",
       "241 completed.\n",
-      "164.856469154 seconds elapsed.\n",
+      "163.946555138 seconds elapsed.\n",
       "\n",
       "271 completed.\n",
-      "185.443655968 seconds elapsed.\n",
+      "185.007315159 seconds elapsed.\n",
       "\n",
       "All 300 completed.\n",
-      "205.273967028 seconds elapsed.\n"
+      "205.365366936 seconds elapsed.\n"
      ]
     }
    ],
@@ -499,7 +497,7 @@
       "Mean total statistical errors: \n",
       "\n",
       "Teff  :  30.932 K\n",
-      "log(g):  0.064 cgs\n",
+      "log(g):  0.064 dex\n",
       "[Fe/H]:  0.022 dex\n"
      ]
     }
