--- a/3_Preprocessing_of_Test_Data.ipynb
+++ b/3_Preprocessing_of_Test_Data.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This notebook takes you through the steps of how to preprocess a high S/N and low S/N test set\n",
     "* required packages: numpy, h5py, vos\n",
-    "* required data files: apStar_combined_main.h5"
+    "* required data files: apStar_combined_main.h5 and training_data.h5"
    ]
   },
   {
