--- a/1_Download_Data.ipynb
+++ b/1_Download_Data.ipynb
@@ -13,7 +13,7 @@
     "| :---- | :----: | :----|\n",
     "| apStar_visits_main.h5 | 35.9GB | apStar individual visit spectra for training StarNet, created from the APOGEE DR13. Used in 2_Preprocessing_of_Training_Data.ipynb |\n",
     "| apStar_combined_main.h5 | 9.6GB | apStar combined spectra for preprocessing StarNet, created by pulling apStar combined spectra from the APOGEE DR13. Used in 3_Preprocessing_of_Test_Data.ipynb |\n",
-    "| training_data.h5 | 1.2GB | apStar individual visit spectra for training, useful to skip preprocessing. Used in 4_Train_Model.ipynb |\n",
+    "| training_data.h5 | 1.2GB | apStar individual visit spectra for training, useful to skip preprocessing. Used in 3_Preprocessing_of_Test_Data.ipynb and 4_Train_Model.ipynb |\n",
     "| mean_and_std.npy | 104B |  mean and standard deviations for the stellar labels used during preprocessing. Used in 4_Train_Model.ipynb and 5_Test_Model.ipynb |\n",
     "| test_data.h5 | 1.13GB | apStar combined spectra test set. Used in 5_Test_Model.ipynb |\n",
     "| starnet_cnn.h5 | 85MB | pretrained StarNet model with keras (tensorflow as the backend) on APOGEE DR13. Used in 5_Test_Model.ipynb | \n",
