--- a/4_Train_Model.ipynb
+++ b/4_Train_Model.ipynb
@@ -81,6 +81,9 @@
     "        fe_h = F['FE_H']\n",
     "        \n",
     "        X = X[indices,:]\n",
+    "        #mask any nan values\n",
+    "        indices_nan = np.where(np.isnan(X))\n",
+    "        X[indices_nan]=0.\n",
     "        \n",
     "        y = np.column_stack((teff[:][indices],\n",
     "                                 logg[:][indices],\n",
@@ -485,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
