--- a/5_Test_Model.ipynb
+++ b/5_Test_Model.ipynb
@@ -148,6 +148,10 @@
    "outputs": [],
    "source": [
     "def batch_predictions(model, spectra, batch_size, denormalize):\n",
+    "    #mask any nan values\n",
+    "    indices_nan = np.where(np.isnan(spectra))\n",
+    "    spectra[indices_nan]=0.\n",
+    "    \n",
     "    predictions = np.zeros((len(spectra),3))\n",
     "    for i in range(len(spectra)/batch_size):\n",
     "        inputs = spectra[i*batch_size:(i+1)*batch_size].reshape((batch_size,spectra.shape[1],1))\n",
@@ -362,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
