--- a/5_Test_Model.ipynb
+++ b/5_Test_Model.ipynb
@@ -148,15 +148,17 @@
    "outputs": [],
    "source": [
     "def batch_predictions(model, spectra, batch_size, denormalize):\n",
-    "    #mask any nan values\n",
-    "    indices_nan = np.where(np.isnan(spectra))\n",
-    "    spectra[indices_nan]=0.\n",
     "    \n",
     "    predictions = np.zeros((len(spectra),3))\n",
     "    for i in range(len(spectra)/batch_size):\n",
     "        inputs = spectra[i*batch_size:(i+1)*batch_size].reshape((batch_size,spectra.shape[1],1))\n",
+    "        #mask any nan values\n",
+    "        indices_nan = np.where(np.isnan(inputs))\n",
+    "        inputs[indices_nan]=0.\n",
     "        predictions[i*batch_size:(i+1)*batch_size] = denormalize(model.predict(inputs))\n",
     "    inputs = spectra[(i+1)*batch_size:].reshape((spectra[(i+1)*batch_size:].shape[0],spectra.shape[1],1))\n",
+    "    indices_nan = np.where(np.isnan(inputs))\n",
+    "    inputs[indices_nan]=0.\n",
     "    predictions[(i+1)*batch_size:] = denormalize(model.predict(inputs))\n",
     "    return predictions"
    ]
