edits to error propagation and added VAE

--- a/6_Error_Propagation.ipynb
+++ b/6_Error_Propagation.ipynb
@@ -35,6 +35,9 @@
     "import h5py\n",
     "import tensorflow as tf\n",
     "import time\n",
+    "import keras.backend as K\n",
+    "import subprocess\n",
+    "\n",
     "\n",
     "datadir= \"\""
    ]
@@ -65,11 +68,9 @@
    "source": [
     "**Define functions to:**\n",
     "\n",
-    "1. convert the keras model into a tensorflow graph\n",
-    "2. load a tensorflow graph\n",
-    "3. compute the jacobian matrix\n",
-    "4. compute the covariance\n",
-    "5. compute the variance\n",
+    "1. compute the jacobian matrix\n",
+    "2. compute the covariance\n",
+    "3. compute the variance\n",
     "\n",
     "Note: these functions can be combined into one, but they are separated here to allow users to extract intermediate results for analysis"
    ]
@@ -77,141 +78,50 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def keras_to_tf(weight_file,input_fld='',output_fld=''):\n",
+    "def calc_jacobian(model,spectra,denormalize=None):\n",
     "    \n",
-    "    import os\n",
-    "    import os.path as osp\n",
-    "    from tensorflow.python.framework import graph_util\n",
-    "    from tensorflow.python.framework import graph_io\n",
-    "    from keras.models import load_model\n",
-    "    from keras import backend as K\n",
-    "    \n",
-    "    \n",
-    "    # weight_file is a .h5 keras model file\n",
-    "    output_node_names_of_input_network = [\"pred0\"] \n",
-    "    output_node_names_of_final_network = 'output_node'\n",
-    "    output_graph_name = weight_file[:-2]+'pb'\n",
-    "    weight_file_path = osp.join(input_fld, weight_file)\n",
-    "    \n",
-    "    net_model = load_model(weight_file_path)\n",
-    "\n",
-    "    num_output = len(output_node_names_of_input_network)\n",
-    "    pred = [None]*num_output\n",
-    "    pred_node_names = [None]*num_output\n",
-    "    for i in range(num_output):\n",
-    "        pred_node_names[i] = output_node_names_of_final_network+str(i)\n",
-    "        pred[i] = tf.identity(net_model.output[i], name=pred_node_names[i])\n",
-    "        \n",
-    "    sess = K.get_session()\n",
-    "    \n",
-    "    constant_graph = graph_util.convert_variables_to_constants(sess, sess.graph.as_graph_def(), pred_node_names)\n",
-    "    graph_io.write_graph(constant_graph, output_fld, output_graph_name, as_text=False)\n",
-    "    print('saved the constant graph (ready for inference) at: ', osp.join(output_fld, output_graph_name))\n",
-    "    \n",
-    "    return output_fld+output_graph_name\n",
-    "\n",
-    "def load_graph(frozen_graph_filename):\n",
-    "\n",
-    "    with tf.gfile.GFile(frozen_graph_filename, \"rb\") as f:\n",
-    "        graph_def = tf.GraphDef()\n",
-    "        graph_def.ParseFromString(f.read())\n",
-    "\n",
-    "    with tf.Graph().as_default() as graph:\n",
-    "        tf.import_graph_def(\n",
-    "            graph_def, \n",
-    "            input_map=None, \n",
-    "            return_elements=None, \n",
-    "            name=\"prefix\", \n",
-    "            op_dict=None, \n",
-    "            producer_op_list=None\n",
-    "        )\n",
-    "        \n",
-    "    input_name = graph.get_operations()[0].name+':0'\n",
-    "    output_name = graph.get_operations()[-1].name+':0'\n",
-    "    \n",
-    "    return graph, input_name, output_name\n",
-    "\n",
-    "def compute_jacobian_from_tf_model_path(tf_model_path,input_data,denormalize=None):\n",
-    "\n",
-    "    tf_model,tf_input,tf_output = load_graph(tf_model_path)    \n",
-    "    \n",
-    "    x = tf_model.get_tensor_by_name(tf_input)\n",
+    "    spectra = spectra.reshape(spectra.shape[0],spectra.shape[1],1)\n",
     "    \n",
     "    if denormalize==None:\n",
-    "        y = tf_model.get_tensor_by_name(tf_output)\n",
+    "        y_list = tf.unstack(model.output)\n",
     "    else:\n",
-    "        y = denormalize(tf_model.get_tensor_by_name(tf_output))\n",
-    "        \n",
-    "    y_list = tf.unstack(y)\n",
-    "    num_outputs = y.shape.as_list()[0]\n",
+    "        y_list = tf.unstack(denormalize(model.output[0]))\n",
+    "\n",
+    "    J = [tf.gradients(y, model.input) for y in y_list]\n",
+    "\n",
+    "\n",
+    "    jacobian_func = [K.function([model.input, K.learning_phase()], j_) for j_ in J]\n",
+    "\n",
+    "    jacobian = np.array([jf([spectra,False]) for jf in jacobian_func])[:,:,0,:,0]\n",
+    "    '''\n",
+    "    for i in range(len(spectra)):\n",
+    "        np.save('temp/temp_jacobian_'+str(i)+'.npy',jacobian_func([spectra[i:i+1],False])[0][:,:,0])\n",
+    "        if i%int(0.1*len(spectra))==0:\n",
+    "            print('Jacobians completed: '+str(i))\n",
     "    \n",
-    "    if input_data.shape[0]==1:\n",
-    "        with tf.Session(graph=tf_model) as sess:\n",
-    "            y_out = sess.run([tf.gradients(y_, x)[0] for y_ in y_list], feed_dict={\n",
-    "                x: input_data\n",
-    "            })\n",
-    "            jacobian = np.asarray(y_out)\n",
-    "            jacobian = jacobian[:,:,:,0]\n",
-    "    else:\n",
-    "        print('\\nCreating jacobian matrices for '+str(len(input_data))+' spectra...\\n')\n",
-    "        print_count = int(len(input_data)/10)\n",
-    "        if print_count==0:\n",
-    "            print_count=1     \n",
-    "            \n",
-    "        jacobian = np.zeros((num_outputs,input_data.shape[0],input_data.shape[1]))\n",
-    "        for i in range(input_data.shape[0]):\n",
-    "            with tf.Session(graph=tf_model) as sess:\n",
-    "                y_out = sess.run([tf.gradients(y_, x)[0] for y_ in y_list], feed_dict={\n",
-    "                    x: input_data[i:i+1]\n",
-    "                })\n",
-    "            jac_temp = np.asarray(y_out)\n",
-    "            jacobian[:,i:i+1,:]=jac_temp[:,:,:,0]\n",
-    "            if (i+1)%print_count==0:\n",
-    "                print(str(i+1)+' jacobians completed...\\n')\n",
-    "        print('All '+str(i+1)+' jacobians completed.\\n')\n",
+    "    for i in range(len(spectra)):\n",
+    "        if i==0:\n",
+    "            jacobian = np.load('temp/temp_jacobian_'+str(i)+'.npy')\n",
+    "        else:\n",
+    "            jacobian = np.concatenate((jacobian,np.load('temp/temp_jacobian_'+str(i)+'.npy')))\n",
+    "        subprocess.check_output(['rm','temp/temp_jacobian_'+str(i)+'.npy'])\n",
+    "    '''\n",
+    "    #jacobian = jacobian_func([spectra[i:i+1],False])#[0][:,:,0]\n",
     "    return jacobian\n",
     "\n",
-    "def compute_covariance_from_tf_model_path(tf_model_path,input_data,var,denormalize=None):\n",
-    "    jac_matrix = compute_jacobian_from_tf_model_path(tf_model_path,input_data,denormalize)\n",
-    "    var[var > 6] = 0\n",
+    "def calc_covariance(model,spectra,err_spectra,denormalize=None):\n",
+    "    jac_matrix = calc_jacobian(model,spectra,denormalize)\n",
+    "    err_spectra[err_spectra > 6] = 0\n",
     "    jac_matrix = np.nan_to_num(jac_matrix)\n",
-    "    covariance = np.einsum('ijk,kjl->jil',(jac_matrix*(var**2)),jac_matrix.T)\n",
+    "    covariance = np.einsum('ijk,kjl->jil',(jac_matrix*(err_spectra**2)),jac_matrix.T)\n",
     "    return covariance\n",
     "\n",
-    "def compute_variance_from_tf_model_path(tf_model_path,input_data,var,denormalize=None):\n",
-    "    covariance = compute_covariance_from_tf_model_path(tf_model_path,input_data,var,denormalize)\n",
+    "def calc_variance(model,spectra,err_spectra,denormalize=None):\n",
+    "    covariance = calc_covariance(model,spectra,err_spectra,denormalize)\n",
     "    return np.diagonal(covariance, offset=0, axis1=1, axis2=2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "save model as a tensorflow graph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Froze 10 variables.\n",
-      "Converted 10 variables to const ops.\n",
-      "('saved the constant graph (ready for inference) at: ', '/data/stars/starnet_cnn.pb')\n"
-     ]
-    }
-   ],
-   "source": [
-    "tf_model_path = keras_to_tf(model_path)"
    ]
   },
   {
@@ -223,8 +133,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mean_and_std = np.load(denormalization_path)\n",
@@ -245,13 +157,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python2.7/site-packages/keras/models.py:288: UserWarning: Error in loading the saved optimizer state. As a result, your model is starting with a freshly initialized optimizer.\n",
+      "  warnings.warn('Error in loading the saved optimizer '\n"
+     ]
+    }
+   ],
    "source": [
-    "keras_model = load_model(model_path)"
+    "model = load_model(model_path)"
    ]
   },
   {
@@ -265,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -284,6 +203,7 @@
     "test_err_spectra = f['error_spectrum']\n",
     "test_ap_ids = f['Ap_ID'][0:num_test]\n",
     "test_labels = np.column_stack((f['TEFF'][0:num_test],f['LOGG'][0:num_test],f['FE_H'][0:num_test]))\n",
+    "\n",
     "print('Test set contains '  + str(len(test_ap_ids))+' stars')"
    ]
   },
@@ -341,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -351,37 +271,37 @@
       "Making predictions and computing propagated variance for 300 spectra\n",
       "\n",
       "1 completed.\n",
-      "0.7711789608 seconds elapsed.\n",
+      "0.303670883179 seconds elapsed.\n",
       "\n",
       "31 completed.\n",
-      "21.0132529736 seconds elapsed.\n",
+      "12.9845468998 seconds elapsed.\n",
       "\n",
       "61 completed.\n",
-      "41.6145811081 seconds elapsed.\n",
+      "33.6231558323 seconds elapsed.\n",
       "\n",
       "91 completed.\n",
-      "61.9209301472 seconds elapsed.\n",
+      "62.2027180195 seconds elapsed.\n",
       "\n",
       "121 completed.\n",
-      "82.1985800266 seconds elapsed.\n",
+      "100.295346975 seconds elapsed.\n",
       "\n",
       "151 completed.\n",
-      "102.604506969 seconds elapsed.\n",
+      "146.935225964 seconds elapsed.\n",
       "\n",
       "181 completed.\n",
-      "122.930263996 seconds elapsed.\n",
+      "205.317786932 seconds elapsed.\n",
       "\n",
       "211 completed.\n",
-      "143.254734039 seconds elapsed.\n",
+      "273.865209818 seconds elapsed.\n",
       "\n",
       "241 completed.\n",
-      "163.946555138 seconds elapsed.\n",
+      "346.001633883 seconds elapsed.\n",
       "\n",
       "271 completed.\n",
-      "185.007315159 seconds elapsed.\n",
+      "432.757597923 seconds elapsed.\n",
       "\n",
       "All 300 completed.\n",
-      "205.365366936 seconds elapsed.\n"
+      "526.05489397 seconds elapsed.\n"
      ]
     }
    ],
@@ -393,11 +313,12 @@
     "for i in range(len(test_labels)):\n",
     "    spectrum = test_spectra[i:i+1].reshape((1,7214,1))\n",
     "    err_spectrum = test_err_spectra[i:i+1]\n",
-    "    variance[i] = compute_variance_from_tf_model_path(tf_model_path,spectrum,err_spectrum,denormalize)\n",
-    "    predictions[i] = denormalize(keras_model.predict(spectrum))\n",
+    "    variance[i] = calc_variance(model,spectrum,err_spectrum,denormalize)\n",
+    "    predictions[i] = denormalize(model.predict(spectrum))\n",
     "    if i%int(0.1*len(test_labels))==0:\n",
     "        print('\\n'+str(i+1)+' completed.\\n'+str(time.time()-time_start)+' seconds elapsed.')\n",
-    "print('\\nAll '+str(i+1)+' completed.\\n'+str(time.time()-time_start)+' seconds elapsed.')"
+    "print('\\nAll '+str(i+1)+' completed.\\n'+str(time.time()-time_start)+' seconds elapsed.')\n",
+    "f.close()\n"
    ]
   },
   {
@@ -409,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -450,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -476,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -487,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -496,9 +417,9 @@
      "text": [
       "Mean total statistical errors: \n",
       "\n",
-      "Teff  :  30.932 K\n",
-      "log(g):  0.064 dex\n",
-      "[Fe/H]:  0.022 dex\n"
+      "Teff  :  35.469 K\n",
+      "log(g):  0.076 dex\n",
+      "[Fe/H]:  0.025 dex\n"
      ]
     }
    ],
@@ -539,7 +460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
